[package]
name = "worklog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
derive_more = "0.99.17"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
iso8601-duration = {version = "0.2.0", features = ["chrono", "serde"]}
serde_json = "1.0.111"
dotenv = "0.15.0"
env_logger = "0.11.0"
oauth2 = "4.4.2"
jsonwebtoken = "9.2.0"
futures = "0.3.30"
rand = "0.8.5"
actix-cors = "0.7.0"
diesel_migrations = "2.1.0"