[package]
name = "worklog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
derive_more = "^0"
chrono = { version = "^0", features = ["serde"] }
diesel = { version = "^2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0", features = ["json"] }
iso8601-duration = {version = "^0", features = ["chrono", "serde"]}
serde_json = "^1"
dotenv = "^0"
env_logger = "^0"
oauth2 = "^4"
jsonwebtoken = "^9"
futures = "^0"
rand = "^0"
actix-cors = "^0"
diesel_migrations = "^2"